--- a/front_end/admin2024/package.json
+++ b/front_end/admin2024/package.json
@@ -12,7 +12,8 @@
     "ant-design-vue": "^4.2.3",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
