--- a/front_end/admin2024/package.json
+++ b/front_end/admin2024/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.2.3",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
