--- a/back_end/src/Admin2024.Api/Admin2024.Api.csproj
+++ b/back_end/src/Admin2024.Api/Admin2024.Api.csproj
@@ -5,6 +5,16 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <DocumentationFile>..\Admin2024.Api\XML\Admin2024.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;1591</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +35,10 @@
     <ProjectReference Include="..\Admin2024.Domain\Admin2024.Domain.csproj" />
     <ProjectReference Include="..\Admin2024.Instructions\Admin2024.Instructions.csproj" />
     <ProjectReference Include="..\Admin2024.Application\Admin2024.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="XML\" />
   </ItemGroup>
 
 </Project>
