--- a/back_end/src/Admin2024.Domain/Admin2024.Domain.csproj
+++ b/back_end/src/Admin2024.Domain/Admin2024.Domain.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
+    <ProjectReference Include="..\Admin2024.Instructions\Admin2024.Instructions.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
