--- a/back_end/src/Admin2024.Domain/Admin2024.Domain.csproj
+++ b/back_end/src/Admin2024.Domain/Admin2024.Domain.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Admin2024.Instructions\Admin2024.Instructions.csproj" />
+    <ProjectReference Include="..\Admin2024.Application.Contracts\Admin2024.Application.Contracts.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
