--- a/front_end/admin2024/package.json
+++ b/front_end/admin2024/package.json
@@ -14,11 +14,13 @@
     "axios": "^1.7.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
+    "vue-echarts": "^7.0.0-beta.0",
     "vue-router": "^4.4.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/composition-api": "^1.7.2",
     "vite": "^5.3.1"
   }
 }
