完成角色用户的连表查询

--- a/back_end/src/Admin2024.Application.Contracts/Admin2024.Application.Contracts.csproj
+++ b/back_end/src/Admin2024.Application.Contracts/Admin2024.Application.Contracts.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Admin2024.Domain\Admin2024.Domain.csproj" />
     <ProjectReference Include="..\Admin2024.Instructions\Admin2024.Instructions.csproj" />
+    <ProjectReference Include="..\Admin2024.EntityFramework\Admin2024.EntityFramework.csproj" />
   </ItemGroup>
 
   <ItemGroup>
