--- a/front_end/admin2024/package.json
+++ b/front_end/admin2024/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.2.3",
     "axios": "^1.7.2",
+    "echarts": "^5.5.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-echarts": "^7.0.0-beta.0",
