更换数据库

--- a/back_end/src/Admin2024.Api/appsettings.json
+++ b/back_end/src/Admin2024.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "pg": "server=0929zs.top;port=5929;database=admin_demo;uid=postgres;pwd=HXFlll091023*;"
+    "pg": "server=0929zs.top;port=5929;database=try_demo;uid=postgres;pwd=HXFlll091023*;"
   },
   "JwtSettings": {
     "Issuer": "aaaa",
