--- a/front_end/admin2024/vercel.json
+++ b/front_end/admin2024/vercel.json
@@ -1,8 +1,5 @@
 {
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "http://101.133.150.189:24731/api/$1"
-    }
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "http://101.133.150.189:24731/api/\\\$1" }
   ]
 }
